source/_includes/css/style.css
/* beige and blue */
:root {
  --bg-color: #f9f9f9;
  --text-color: #222;
  --highlight-color: #095ae8;
  --code-text-color: var(--code-mono-1);
  --code-bg-color: #fff;

  /* Based on Atom One Light, but higher contrast for a11y */
  /* https://github.com/atom/atom/tree/master/packages/one-light-syntax */
  --syntax-hue: 230;
  --syntax-saturation: 1%;
  --syntax-brightness: 100%;

  --code-mono-1: hsl(var(--syntax-hue), 8%, 24%);
  --code-mono-2: hsl(var(--syntax-hue), 6%, 44%);
  --code-mono-3: hsl(var(--syntax-hue), 4%, 64%);
  --code-hue-1: hsl(198, 99%, 37%); /* cyan */
  --code-hue-2: hsl(221, 76%, 47%); /* blue */
  --code-hue-3: hsl(301, 63%, 40%); /* purple */
  --code-hue-4: hsl(119, 72%, 31%); /* green */
  --code-hue-5: hsl(5, 68%, 48%); /* red 1 */
  --code-hue-5-2: hsl(344, 84%, 43%); /* red 2 */
  --code-hue-6: hsl(41, 99%, 30%); /* orange 1 */
  --code-hue-6-2: hsl(41, 99%, 30%); /* orange 2 */

  --body-font-family: "Libre Baskerville", serif;
  --heading-font-family: "Libre Franklin", sans-serif;
  --code-font-family: "DM Mono", monospace;
}

body {
  font-family: var(--body-font-family);
  background: var(--bg-color);
  color: var(--text-color);
  padding: 0;
  margin: 0;
  font-size: 16px;
  line-height: 1.9;
}

.container {
  width: 700px;
  padding: 0 20px;
  margin: 0 auto;
}

/* link */
a {
  color: var(--highlight-color);
  transition: color 500ms ease;
}
a:hover {
  opacity: 0.7;
}

/* header */
.header {
  padding: 1.5em 0 1em;
  display: flex;
}
.header__title {
  margin: 0 10px 0 0;
  flex-grow: 1;
  font-size: 1em;
  font-weight: normal;
}
.header__title a {
  color: var(--text-color);
  text-decoration: none;
}
.header__nav {
  flex-grow: 0;
}
.menu {
  list-style-position: outside;
  list-style-type: none;
  padding: 0;
  margin: 0;
  text-align: right;
}
.menu__item {
  display: inline-block;
  padding: 0 0 0 0.7em;
}
.menu__item a {
  color: var(--text-color);
  text-decoration: none;
}

/* footer */
.footer {
  padding: 3em 0 4em;
  text-align: center;
}

/* title */
.title {
  font-family: var(--heading-font-family);
  font-size: 3em;
  margin: 0 0 0.2em;
  line-height: 1.1;
}
.title a {
  color: var(--text-color);
  text-decoration: none;
}

/* post */
.post,
.post-list {
  padding: 1.7em 0 1.25em;
}

/* separator only for index pages */
.post:not(:first-child):before {
  content: "* * *";
  font-family: var(--heading-font-family);
  font-weight: bold;
  font-size: 4em;
  display: block;
  margin: 0.2em auto 0.6em;
  text-align: center;
  line-height: 1;
}

.post .meta {
  font-size: 0.75em;
}

.post-list .title {
  margin-bottom: 10px;
}
.post-list-item {
  line-height: 1.6em;
  padding: 10px 0;
  display: flex;
}
.post-list-item__date {
  font-size: 0.8em;
  width: 8em;
  flex-shrink: 0;
}
.post-list-item__title {
  font-size: 1.3em;
  margin: 0;
  font-family: var(--heading-font-family);
  font-weight: bold;
}
.post-list-item__title a {
  text-decoration: none;
  color: var(--text-color);
}

/* content */
.content h2,
.content h3,
.content h4,
.content h5,
.content h6 {
  font-family: var(--heading-font-family);
  margin: 1em 0 0 0;
}

.content h2 {
  font-size: 2.2em;
  line-height: 1.1;
}

.content h3 {
  font-size: 1.6em;
  line-height: 1.3;
}

.content h4 {
  font-size: 1.2em;
}

.content img {
  max-width: 100%;
  height: auto;
}

.content p {
  margin: 1.15em 0;
}

/*
 * For more details of responsive images,
 * see the custom markdown renderer's `image` method.
 */
.responsive-image-wrapper {
  display: block;
}
.responsive-image-outer {
  display: block;
  margin: 0 auto;
}
.responsive-image-inner {
  display: block;
  position: relative;
}
.responsive-image {
  position: absolute;
  top: 0;
  left: 0;
}

.social-buttons {
  margin: 2em 0 0;
}

/* comments */
.comments {
  margin-bottom: 3em;
}

/* list */
ul,
ol {
  list-style-position: outside;
  padding-left: 1.4em;
}

/* table */
.table-wrapper {
  overflow-x: auto;
}
table {
  border-collapse: collapse;
  margin: 2em 0;
}
th {
  font-weight: normal;
  text-align: left;
}
tbody {
  border-top: 1px solid #333;
  padding: 0.5em 0;
}
th,
td {
  padding-right: 1em;
}

/* code */
code {
  color: var(--code-text-color);
  background-color: var(--code-bg-color);
  font-size: 0.9em;
  font-family: var(--code-font-family);
}
.code__filename {
  display: inline-block;
  margin-bottom: 13px;
  padding: 5px 10px;
  font-size: 0.85em;
  background-color: #666;
}

.hljs {
  display: block;
  line-height: 1.5em;
  padding: 1em 20px;
  overflow-x: auto;
  -webkit-overflow-scrolling: touch;

  color: var(--code-text-color);
  background-color: var(--code-bg-color);
}

.hljs-comment,
.hljs-quote {
  /* color: var(--code-mono-3); */
  /* Using mono-2 for higher contrast */
  color: var(--code-mono-2);
  font-style: italic;
}

.hljs-doctag,
.hljs-keyword,
.hljs-formula {
  color: var(--code-hue-3);
}

.hljs-section,
.hljs-name,
.hljs-selector-tag,
.hljs-deletion,
.hljs-subst {
  color: var(--code-hue-5);
}

.hljs-literal {
  color: var(--code-hue-1);
}

.hljs-string,
.hljs-regexp,
.hljs-addition,
.hljs-attribute,
.hljs-meta-string {
  color: var(--code-hue-4);
}

.hljs-built_in,
.hljs-class .hljs-title {
  color: var(--code-hue-6-2);
}

.hljs-attr,
.hljs-variable,
.hljs-template-variable,
.hljs-type,
.hljs-selector-class,
.hljs-selector-attr,
.hljs-selector-pseudo,
.hljs-number {
  color: var(--code-hue-6);
}

.hljs-symbol,
.hljs-bullet,
.hljs-link,
.hljs-meta,
.hljs-selector-id,
.hljs-title {
  color: var(--code-hue-2);
}

.hljs-emphasis {
  font-style: italic;
}

.hljs-strong {
  font-weight: bold;
}

.hljs-link {
  text-decoration: underline;
}

/* blockquote */
/* https://css-tricks.com/snippets/css/simple-and-nice-blockquote-styling/ */
blockquote {
  border-left: 5px solid var(--text-color);
  font-style: italic;
  padding: 0.1em 1.2em;
  margin-left: 0;
  quotes: "\201C""\201D""\2018""\2019";
}

blockquote p:first-child:before {
  content: open-quote;
  font-family: serif;
  font-size: 3em;
  font-weight: bold;
  line-height: 0.1em;
  margin-right: 0.2em;
  vertical-align: -0.4em;
}

blockquote cite {
  color: #999990;
}

blockquote cite:before {
  content: "- ";
}

/* pagination */
.pagination {
  list-style-position: outside;
  list-style-type: none;
  padding: 0;
  margin-top: 20px;
  display: flex;
  justify-content: space-between;
}
.pagination li {
  min-height: 1em;
}
.pagination a {
  text-decoration: none;
}
.pagination__prev-page,
.pagination__next-page {
  width: 35%;
}
.pagination__next-page {
  text-align: right;
}
.pagination__archives {
  flex-grow: 1;
  text-align: center;
}

/* mobile */
@media only screen and (max-width: 767px) {
  body {
    font-size: 15px;
    line-height: 1.65;
  }
  .container {
    width: auto;
  }
  .post,
  .post-list {
    padding-top: 10px;
  }
  .post-list-item {
    display: block;
  }
  .hljs {
    margin-left: -20px;
    margin-right: -20px;
    padding: 1.4em 20px;
    border-radius: 0;
  }
  li .hljs {
    margin-left: 0;
  }
  .responsive-image-wrapper {
    margin-left: -20px;
    margin-right: -20px;
  }
}

